[package]
name = "advent-of-code-2020-day-04"
version = "0.1.0"
authors = ["Sebastian Ziebell <sebastian.ziebell@asquera.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.36"
itertools = "0.9.0"
regex = "1.4.2"
