[package]
name = "day-20"
version = "0.1.0"
authors = ["Sebastian Ziebell <sebastian.ziebell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.36"
bitvec = "0.20.1"
itertools = "0.10.0"
ndarray = "0.14.0"
